src/syntax_analysis/statements/tests/snapshots/rust_monkey_interpreter__syntax_analysis__statements__tests__test_syntax_analysis_for_let_statements_case2.snap
---
source: src/syntax_analysis/statements/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string()))"
---
{
  "abstract_syntax_tree": [
    {
      "STATEMENT": {
        "statement": {
          "LET": {
            "identifier_token": {
              "IDENTIFIER": {
                "literal": "x"
              }
            },
            "expression": {
              "INTEGER": {
                "integer_token": {
                  "INTEGER": {
                    "literal": "5"
                  }
                }
              }
            }
          }
        }
      }
    },
    {
      "STATEMENT": {
        "statement": {
          "LET": {
            "identifier_token": {
              "IDENTIFIER": {
                "literal": "z"
              }
            },
            "expression": {
              "INFIX": {
                "left_hand": {
                  "INTEGER": {
                    "integer_token": {
                      "INTEGER": {
                        "literal": "7"
                      }
                    }
                  }
                },
                "operator_token": "PLUS",
                "right_hand": {
                  "INTEGER": {
                    "integer_token": {
                      "INTEGER": {
                        "literal": "10"
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
