src/syntax_analysis/statements/tests/snapshots/rust_monkey_interpreter__syntax_analysis__statements__tests__test_syntax_analysis_for_let_statements_syntax_errors_case1.snap
---
source: src/syntax_analysis/statements/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string()))"
---
{
  "abstract_syntax_tree": [],
  "syntax_parsing_errors": [
    "Syntax error : Expected a ASSIGN."
  ]
}
